fix(match2): team icon in matchpage header not aligned properly in darkmode (#5803)
* make icon alignment behave in darkmode

* take out legacy

* cleanup

--- a/stylesheets/commons/BigMatch.less
+++ b/stylesheets/commons/BigMatch.less
@@ -73,6 +73,14 @@ Author(s): Rathoz
 		justify-content: center;
 	}
 
+	[ data-darkreader-scheme="dark" ] &,
+	.theme--dark & {
+		.team-template-image-icon.darkmode,
+		.team-template-image-icon.team-template-darkmode {
+			display: flex !important;
+		}
+	}
+
 	.team-template-image-icon {
 		display: flex;
 		align-items: center;
